--- a/style.css
+++ b/style.css
@@ -482,7 +482,7 @@ footer {
     height: 100%;
     background: 
         linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)),
-        url('images/hero.jpeg') center/cover no-repeat;
+        url('images/hero.jpg') center/cover no-repeat;
     z-index: -1;
 }
 
